# binary-waterfall-unofficial

./: .gitignore  README.md  binary_waterfall_unofficial.py  build.bat  build.py  environment.yml  pyproject.toml
.github/workflows/: build.yml
src/binary_waterfall_unofficial/: __init__.py  core.py  dialogs.py  generators.py  lang.py  ngen.py  outputs.py  rust_bridge.py  version.yml  widgets.py  window.py  workers.py
src/binary_waterfall_unofficial/bw_accelerator/: a
src/binary_waterfall_unofficial/constants/: __init__.py  defaults.py  enums.py  links.py  paths.py  platform.py  splash.py  version.py
src/binary_waterfall_unofficial/helpers/: __init__.py  colors.py  general.py  images.py  qt.py
src/binary_waterfall_unofficial/langs/: en_us.json  ja_jp.json  ko_kr.json  zh_cn.json  zh_hant.json  zh_tw.json
src/bw_accelerator/: Cargo.toml
src/bw_accelerator/src/: audio.rs  export_sequence.rs  export_video.rs  filter.rs  frame.rs  lib.rs  mmap.rs
tests/: test_workers.py
