[project]
name = "binary-waterfall-unofficial"
version = "3.7.0"
readme = "README.md"
description = "A Raw Data Media Player (Unofficial Enhanced Version)"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"},
    {name = "X-starRelight", email = "sxxyrry@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video :: Display"
]
dependencies = [
    "pyyaml",
    "Pillow",
    "PyQt6",
    "pydub",
    "audioop-lts",
    "moviepy",
    "proglog"
]
requires-python = ">=3.13"

[project.urls]
homepage = "https://github.com/X-starRelight/binary-waterfall-unofficial"
repository = "https://github.com/X-starRelight/binary-waterfall-unofficial"
Issues = "https://github.com/X-starRelight/binary-waterfall-unofficial/issues"

[dependency-groups]
build = [
    "nuitka>=4.1.3",
]
