[project]
name = "binary-waterfall-unofficial"
version = "3.8.0"
readme = "README.md"
description = "A Raw Data Media Player (Unofficial Enhanced Version)"
license= {file = "LICENSE"}
authors = [
    {name = "Ella Jameson", email = "ellagjameson@gmail.com"},
    {name = "X-starRelight", email = "sxxyrry@gmail.com"}
]
classifiers = [
    "Topic :: Multimedia",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Sound/Audio :: Conversion",
    "Topic :: Multimedia :: Sound/Audio :: Players",
    "Topic :: Multimedia :: Video",
    "Topic :: Multimedia :: Video :: Conversion",
    "Topic :: Multimedia :: Video :: Display"
]
dependencies = [
    "pyyaml==6.0.3",
    "Pillow==11.3.0",
    "PySide6==6.11.0",
    "pydub==0.25.1",
    "audioop-lts==0.2.2",
    "moviepy==2.2.1",
    "proglog==0.1.12",
    "numpy==2.5.1",
    "senri-ffi==0.1.0",
    "pytest==9.1.1",
]
requires-python = ">=3.13"

[project.urls]
homepage = "https://github.com/X-starRelight/binary-waterfall-unofficial"
repository = "https://github.com/X-starRelight/binary-waterfall-unofficial"
Issues = "https://github.com/X-starRelight/binary-waterfall-unofficial/issues"

[dependency-groups]
build = [
    "nuitka>=4.1.3",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
# importmode = "importlib"
